# Web3

./: git Commands.txt
Assigment1/: A1.js  Class1_Assignment.js  Class1_Assignment.ts  Class2_Assignment.ts  readme.txt
Assigment2/: A3.js  readme.txt
Assigment3/: A4.js  readme.txt
Assigment4/: A4.ts  A5.js
Assigment5/: readme.txt
Class 0/: A0.js  A0.ts
Class 2/: A3.ts
Class 3/: A4.ts
Class 4/: A5.ts  README.txt
Class 5/: A6.js  A6.ts
hello-fastapi/: pyproject.toml
hello-fastapi/todo/: main.py
