[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"

[tool.poetry.scripts]
dev = "todo.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
